# prg1_scaffold

./: .gitignore  CMakeLists.txt  README.md  Tectonic.toml  automake.py  automakeconfig.json  main.cpp  template.aux  template.tex  testing.py
.run/: Run laborantin.run.xml
_minted-template/: 4D1121E2469F1F8B0E5D741BF2266DFAD4FC98F5C496820738F960E3BBFFB582.pygtex
doc/: automake.md
pdfs/: Code_Rendu_Template-2.pdf:Zone.Identifier  exo.tex  repas.cpp  repas.tex  taxi-v2.cpp
projects/labo_calendar/: CMakeLists.txt
projects/labo_calendar/src/: main.cpp
src/: ex3_19.cpp  example.cpp  exo_3_15.cpp  exo_3_20.cpp  exo_3_24.cpp  exo_3_26.cpp  exo_3_28.cpp  exo_3_29.cpp  exo_4_10.cpp  exo_4_3.cpp  exo_4_5.cpp  exo_4_8.cpp  exo_4_9.cpp  exo_5_10.cpp  exo_5_11.cpp  exo_5_12.cpp  exo_5_13.cpp  exo_5_14.cpp  exo_5_17.cpp  exo_5_18.cpp  exo_5_19.cpp  exo_5_20.cpp  exo_5_21.cpp  exo_5_22.cpp  exo_5_23.cpp  exo_5_24.cpp  exo_5_25.cpp  exo_5_4.cpp  exo_5_5.cpp  exo_5_7.cpp  exo_5_8.cpp  exo_5_9.cpp  exo_6_1.cpp  exo_6_10.cpp  exo_6_12.cpp  exo_6_13.cpp  exo_6_14.cpp  exo_6_15.cpp  exo_6_16.cpp  exo_6_4.cpp  (+8 more)
src/exo_7_1/: Point.cpp  Point.h  main.cpp
src/utils/: matrix_display.h  saisie.h
tests/repas/: basic.tst
tests/taxi/: basic.tst
tools/tooling/: Cargo.toml  template.tex
tools/tooling/src/: cli.rs  config.rs  main.rs
tools/tooling/src/commands/: make.rs
tools/tooling/src/latex/: file_manager.rs  mod.rs
