[package]
edition = "2021"
name = "tooling"
authors = ["valentin.ricard"]
version = "0.0.1"

[dependencies]
similar = { version = "2.2.0", features = ["inline"] }
clap = { version = "4.0.1", features= ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13.2"
toml = "0.5.9"
console = "0.15.1"
glob = "0.3.0"
cmake = "0.1.48"
indicatif = "0.17.0"
anyhow = "1.0.60"