[package]
edition = "2021"
name = "laborantin"
authors = ["valentin.ricard"]
version = "0.0.1"

[dependencies]
similar = { version = "2.2.0", features = ["inline"] }
clap = { version = "4.0", features= ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13.2"
toml = "0.5.9"
console = "0.15.1"
glob = "0.3.0"
cmake = "0.1.48"
indicatif = "0.17.0"
anyhow = "1.0.60"
tectonic = "0.12.0"
tectonic_bridge_core = "0.3.1"
tectonic_bundles = "0.3.0"
pathdiff = "0.2.1"
tempdir = "0.3.7"